Node_app_k8s_Dep/k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-node-api-to-postgres
spec:
  podSelector:
    matchLabels:
      app: postgres-db
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: node-api
    ports:
    - protocol: TCP
      port: 5432
  policyTypes:
  - Ingress
